--- a/src/data/projects_card_data.json
+++ b/src/data/projects_card_data.json
@@ -4,6 +4,7 @@
     "title": "Joinly",
     "year": "2025",
     "description": "Plateforme de partage d'événements collaborative.",
+    "thumbnail": "/assets/imgs/projects/Joinly/thumbnail.jpg",
     "imgSrc": "/assets/imgs/projects/Joinly/home-page.png",
     "imgAlt": "Issa Jafari - < aLT /> foramtion projet fin formation",
     "techStackPrimary": ["React.Js", "TypeScript", "Nest.Js"],
@@ -15,6 +16,7 @@
     "title": "Alumni",
     "year": "2024",
     "description": "Plateforme Alumni pour le suivi des anciens apprenants.",
+    "thumbnail": "/assets/imgs/projects/Alumni/thumbnail.jpg",
     "imgSrc": "/assets/imgs/projects/Alumni/home-page.png",
     "imgAlt": "Issa Jafari - project 10 mention web, 10mentionweb",
     "techStackPrimary": ["Twig", "Symfony 8"],
@@ -26,6 +28,7 @@
     "title": "Idea Pedia",
     "year": "2024",
     "description": "Plateforme de partage d'articles informatifs.",
+    "thumbnail": "/assets/imgs/projects/IdeaPedia/thumbnail.jpg",
     "imgSrc": "/assets/imgs/projects/IdeaPedia/home-page-min.png",
     "imgAlt": "Issa Jafari - Colombbus - rojet fin fromation",
     "techStackPrimary": ["HTML 5", "CSS 3", "JavaScript"],
@@ -37,6 +40,7 @@
     "title": "FaceBook (clone)",
     "year": "2023",
     "description": "Mon premier grand projet réalisé avec les technologies fondamentales du web.",
+    "thumbnail": "/assets/imgs/projects/FaceBook-clone/thumbnail.jpg",
     "imgSrc": "/assets/imgs/projects/FaceBook-clone/home-page.png",
     "imgAlt": "Issa Jafari - rojet front-end",
     "techStackPrimary": ["HTML 5", "CSS 3"],
